# AgentMix

./: .gitignore  CLAUDE.md  LICENSE  README.md  auto-imports.d.ts  config.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRD.md  ROADMAP.md
docs/decisions/: 0001-tauri-vs-electron.md  0002-no-vscode-extension.md  0003-global-recursive-scan.md  0004-merge-workbench-manual-and-ai.md  0005-merge-workbench-beyond-conflicts.md  0006-health-check-description-quality.md  0007-rename-skillmix-to-agentmix.md  0008-mvp-scope-windows-claude-code.md  0009-asset-abstraction-red-line.md  0010-api-key-os-keychain.md  0011-backup-location-agentmix-home.md  0012-health-check-structural-validation.md  0013-compatibility-matrix-community.md  0014-ai-features-api-first.md  0015-embedding-provider-voyage.md  0016-i18n-zh-en-mvp.md  0017-auto-update-channel.md  0018-ai-fix-forced-diff.md  0019-v0.1-alpha-auto-update-deferred.md  0020-i18n-architecture-vs-translation.md  0021-export-plan-dry-run-data.md  0022-dual-conflict-model.md  0023-lock-excludes-metadata.md  0024-security-contract-boundary.md  README.md
e2e/: README.md  conflict-path.spec.ts  golden-path.spec.ts  helpers.ts  tsconfig.json  wdio.conf.ts
scripts/: check-all.mjs  lint-asset-purity.mjs  lint-i18n-keys.mjs  lint-i18n.mjs  lint-no-direct-write.mjs  make-latest-json.mjs
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/agentmix-core/: Cargo.toml
src-tauri/crates/agentmix-core/src/: capability.rs  compatibility-matrix.json  composer.rs  exporter.rs  health.rs  lib.rs  merge.rs  parser.rs  runtime_conflict.rs  scanner.rs  security.rs  tool-adapters.json  tool_adapters.rs  update.rs
src-tauri/crates/agentmix-core/tests/: e2e_pipeline.rs  perf_scan.rs
src-tauri/crates/agentmix-types/: Cargo.toml
src-tauri/crates/agentmix-types/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/: inter.css
src/components/: Badge.tsx  ComboListPanel.tsx  ExportPanel.tsx  HealthCheckPanel.tsx  MergeWorkbench.tsx  SkillItem.tsx  SourceProjectPanel.tsx  TitleBar.tsx  UpdateModal.tsx  WelcomeScreen.tsx
src/components/MergeWorkbench/: index.tsx
src/components/ui/: IconButton.tsx  Switch.tsx  Tooltip.tsx
src/data/: mockData.ts
src/i18n/: en.json  index.ts  securityRuleKeys.test.ts  zh.json
src/lib/: appVersion.test.ts  appVersion.ts  composer.ts  exportGate.test.ts  exportGate.ts  exporter.ts  merge.ts  mergeSources.test.ts  mergeSources.ts  path.test.ts  path.ts  scan.ts  skillFilter.test.ts  skillFilter.ts  skillView.ts  updater.ts  viewRouting.test.ts  viewRouting.ts
src/pages/: Index.tsx  MainLayout.tsx  NotFound.tsx
src/stores/: compositionStore.test.ts  compositionStore.ts  exportStore.test.ts  exportStore.ts  mergeStore.test.ts  mergeStore.ts  projectStore.test.ts  projectStore.ts  uiStore.test.ts  uiStore.ts  updateStore.test.ts  updateStore.ts
src/test/: fixtures.ts
src/types/: app.ts  generated.ts  index.ts
tasks/: plan-v0.1.5.md  plan.md  todo-v0.1.5.md  todo.md
tasks/v0.1.0/: plan.md  spec.md  todo.md
tasks/v0.1.5/: plan.md  spec.md  todo.md
tasks/v0.2.0/: plan.md  spec.md  todo.md
tasks/v0.2.1/: spec.md
