[package]
name = "agentmix"
version = "0.1.5"
description = "AgentMix — scan, mix and export Agent Skills to AI coding tools"
authors = ["AgentMix"]
edition = "2021"

# Workspace root. agentmix-types holds the shared models and is tauri-free so
# TypeScript bindings can be generated headlessly (see crates/agentmix-types).
[workspace]
members = ["crates/agentmix-types", "crates/agentmix-core"]
resolver = "2"

# The library is what main.rs (and a future mobile entry point) call into.
[lib]
name = "agentmix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Exposes a test-only command so the WebDriver e2e suite can feed folder paths
# past the native picker (which WebDriver cannot drive). Off by default, so it is
# never compiled into a production build (DESIGN.md §8 / no production bypass).
e2e = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agentmix-types = { path = "crates/agentmix-types" }
agentmix-core = { path = "crates/agentmix-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Auto-update via GitHub Releases latest.json with signature verification
# (DESIGN.md §6.16, plan T20; dependency confirmed in plan decision 4).
tauri-plugin-updater = "2"
