[package]
name = "agentmix-core"
version = "0.1.0"
edition = "2021"
description = "AgentMix business logic (scan, parse, health, compose, export) — tauri-free so it tests headlessly"

[dependencies]
agentmix-types = { path = "../agentmix-types" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
