[package]
name = "agentmix-core"
version = "0.2.0"
edition = "2021"
description = "AgentMix business logic (scan, parse, health, compose, export) — tauri-free so it tests headlessly"

[dependencies]
agentmix-types = { path = "../agentmix-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
# Backup archives are .zip (DESIGN.md §1.2). Deflate only — no bzip2/zstd/aes.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
